Implement JWT authentication with token validation
- Configured JWT bearer authentication in Program.cs with tiken validation
- Added security definition for Bearer token in Swagger
- Added TokenValidationParameters to validate issuer, audience, lifetime, and signing key
- Set ClockSkew to zero for precise token expiration handling

--- a/ToDoListAPI/appsettings.json
+++ b/ToDoListAPI/appsettings.json
@@ -2,12 +2,19 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
+      "Microsoft.AspNetCore.Authentication": "Warning",
+      "Microsoft.AspNetCore.Authorization" : "Warning",
       "Microsoft.AspNetCore": "Warning"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-R2GTVOI;Database=ToDoList;Encrypt=False;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+    "JwtSettings": {
+      "Issuer": "ToDoListAPI",
+      "Audience": "ToDoListUsers",
+      "Secret": "BardzoDlugieSilneHasloJWT1234567890123456",
+      "TokenExpirationInMinutes": 60
+    }
   }
-
-}
